<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="ua.in.zeusapps.mediar.activities.MenuActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/activity_main_menu_profile_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/profile_img"
        app:civ_border_color="@color/colorProfileImgBorder"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="24dp"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="171dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_name">

        <Button
            android:id="@+id/activity_main_menu_play_button"
            style="@style/SnapSafariButton.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_play"
            android:text="@string/activity_main_menu_play_button"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/activity_main_menu_snap_cards_button"
            style="@style/SnapSafariButton.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_my_cards"
            android:text="@string/activity_main_menu_snap_card_button"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/activity_main_menu_settings"
            style="@style/SnapSafariButton.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_settings"
            android:text="@string/activity_main_menu_settings"
            android:textSize="14sp"/>

    </LinearLayout>


    <TextView
        android:id="@+id/welcome_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_menu_profile_image"/>


</android.support.constraint.ConstraintLayout>
