<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ua.in.zeusapps.mediar.controls.MenuDark
        android:id="@+id/activity_promo_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        tools:context="ua.in.zeusapps.mediar.activities.SnapActivity">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/promo_background"/>

            <ImageView
                android:id="@+id/activity_snap_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                app:srcCompat="@drawable/elephant"/>

        </FrameLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@drawable/promo_background">

            <TextView
                android:id="@+id/activity_snap_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/activity_snap_name"
                android:textColor="@color/colorDarkBlue"
                android:textSize="22sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/activity_snap_level"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="0dp"
                android:text="@string/activity_snap_level"
                android:textColor="@color/colorLightBlue"
                android:textSize="14sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_snap_label"/>

            <TextView
                android:id="@+id/activity_snap_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/activity_snap_description"
                android:textColor="@android:color/black"
                android:textSize="13sp"
                app:layout_constraintBottom_toTopOf="@+id/activity_snap_snap_it_button"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_snap_label"
                app:layout_constraintVertical_bias="0.63"/>

            <ImageView
                android:id="@+id/activity_snap_icon"
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/activity_snap_label"
                app:srcCompat="@drawable/ic_earth"/>

            <Button
                android:id="@+id/activity_snap_snap_it_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_menu"
                android:text="@string/activity_snap_button"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toTopOf="@+id/activity_snap_redeem_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:id="@+id/activity_snap_redeem_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_gmail"
                android:text="@string/activity_snap_redeem_now"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </android.support.constraint.ConstraintLayout>


    </LinearLayout>
</RelativeLayout>


